# odbc-niceties

./: .gitignore  README.rst  pyproject.toml
tests/: test_odbc_niceties.py
