[tool.poetry]
name = "odbc-niceties"
version = "0.1.0"
description = "Some ODBC nice things."
authors = ["joefromct"]

[tool.poetry.dependencies]
python = "^3.7"
tabulate = "^0.8.7"
pyodbc = "^4.0.30"
cytoolz = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",]
